gccida/g0/extract_fixed_bit_field
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extract_fixed_bit_field/src/expmed.c:2033:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode tmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extract_fixed_bit_field/src/expmed.c:2047:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extract_fixed_bit_field/src/expmed.c:2052:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *amount; // [rsp+30h] [rbp-30h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extract_fixed_bit_field/src/expmed.c:2053:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *amount_0; // [rsp+40h] [rbp-20h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extract_fixed_bit_field/src/expmed.c:2056:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+5Ch] [rbp-4h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extract_fixed_bit_field/src/expmed.c:2057:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+5Ch] [rbp-4h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extract_fixed_bit_field/src/expmed.c:2058:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modeb; // [rsp+5Ch] [rbp-4h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extract_fixed_bit_field/src/expmed.c:2075:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( op0a[1] ) 
^    ~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extract_fixed_bit_field/src/expmed.c:2079:69: error: invalid suffix 'xmode' on integer constant
mode = get_best_mode( bitsize, 8 * offset + bitpos, v10, *(short *)0xmode, v9); 
                                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extract_fixed_bit_field/src/expmed.c:2114:19: error: use of undeclared identifier 'machine_mode'
v12 = mask_rtx( ( machine_mode)*( ( unsigned __int8 *)op0a + 2), 0, bitsize, 0); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extract_fixed_bit_field/src/expmed.c:2116:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)op0a + 2), 
  ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/extract_fixed_bit_field/src/obj/expmed.o] Error 1
